# georent

./: .flake8  .gitignore  .pre-commit-config.yaml  AFTER_INSTALL_AUDIT.md  AUDIT.md  BACKUP_GUIDE.md  BUGLIST_RC1.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE.md  DEPLOYMENT_DIAGNOSIS.md  DEPLOYMENT_GUIDE.md  DOCTYPE_STRUCTURE_AUDIT.md  ERPNEXT_ARCHITECTURE.md  ERPNEXT_DEPENDENCY_AUDIT.md  FINAL_DECISION.md  FIX_REPORT.md  FRAPPE16_COMPATIBILITY.md  FRAPPE_CLOUD_READINESS.md  FRAPPE_CLOUD_SETUP.md  GIT_STRATEGY.md  INSTALLATION_REPORT.md  INSTALLATION_SUCCESS.md  KNOWN_ISSUES.md  LICENSE  MANIFEST.in  MARKETPLACE_CHECKLIST.md  MILESTONES.md  PERFORMANCE_REPORT.md  PROJECT_MANAGER.md  QA_CHECKLIST.md  README.md  RELEASE_NOTES.md  REPOSITORY_AUDIT.md  RISKS.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  SITE_AUDIT.md  STRUCTURE_AUDIT.md  (+6 more)
.github/workflows/: ci.yml
docs/: development.md  installation.md  user_guide.md
rentpro/: README.md  boot.py  patches.txt
rentpro/gps/: __init__.py  mock_provider.py  provider.py
rentpro/number_cards/: active_contracts.json  active_reservations.json  active_subscriptions.json  available_vehicles.json  cancelled_reservations.json  contracts_completed_today.json  contracts_paid_today.json  documents_uploaded_today.json  expired_documents.json  expiring_in_30_days.json  maintenance_vehicles.json  monthly_expenses.json  monthly_revenue.json  ocr_success_rate.json  outstanding_balance.json  suspended_agencies.json  total_contracts.json  total_documents.json  total_reservations.json  total_vehicles.json  tracked_vehicles.json  (+1 more)
(+174 files in other folders)
